去除一部分引用